# uljika-update-server

./: Cargo.toml  Dockerfile
src/: libs.rs  main.rs
src/controller/: mod.rs
src/controller/v1/: releases.rs
