[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
fxhash = "0.2.1"
moka = { version = "0.12.8", features = ["future"] }
octocrab = "0.41.1"
reqwest = "0.12.8"
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
